examples/33-aws-eks-ecomm-3-istio/1-Traffic/ui-svc-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ui-shoppingportal-vs
  namespace: shoppingportal  
spec:
  gateways:
  - shoppingportal-gateway
  hosts:
   - "*"
  http:
  - match:
    - uri:
        prefix: /ui/
    route:
    - destination:
        host: ms-sp-ui-svc.shoppingportal.svc.cluster.local
        port:
          number: 80
